--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/demaxed/docker-flask-react.git"
   },
-  "author": "Maxim-Demy <demyanenkomaxim22@gmail.com",
+  "author": "Maxim-Demy <demyanenkomaxim22@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/demaxed/docker-flask-react/issues"
